--- a/i18n/module/i18n_module_en.properties
+++ b/i18n/module/i18n_module_en.properties
@@ -1,5 +1,5 @@
-profile=Profile
-account=Account
+profile_settings=Profile Settings
+account_settings=Account Settings
 user_email_address=E-mail
 surname=Surname
 first_name=First name
