Translations for analysis module property

--- a/i18n/module/i18n_module_en.properties
+++ b/i18n/module/i18n_module_en.properties
@@ -37,3 +37,6 @@ db_language=Database language
 language=Interface language
 enable_message_email_notifications=Enable message email notifications
 enable_message_sms_notifications=Enable message SMS notifications
+analysis_module=Property to display in analysis modules
+name=Name
+short_name=Short name
