--- a/i18n/module/i18n_module_en.properties
+++ b/i18n/module/i18n_module_en.properties
@@ -27,7 +27,7 @@ languages=Languages
 update_user_profile_success=Profile was updated
 settings=Settings
 property_to_display_in_analysis_modules=Property to display in analysis modules
-user_settings=User settings
+user_settings=User Settings
 general=General
 message=Message
 update_user_profile_success=Profile was updated
@@ -40,3 +40,4 @@ enable_message_sms_notifications=Enable message SMS notifications
 analysis_module=Property to display in analysis modules
 name=Name
 short_name=Short name
+system_setting_default=System setting default
