Invalid email id should not be updated

--- a/i18n/module/i18n_module_en.properties
+++ b/i18n/module/i18n_module_en.properties
@@ -41,3 +41,6 @@ analysis_module=Property to display in analysis modules
 name=Name
 short_name=Short name
 system_setting_default=System setting default
+value_should_be_an_email= Please input a valid email id
+update_user_profile_fail=Failed to update user profile
+update_settings_fail=Fialed to update user settings
