--- a/i18n/module/i18n_module_en.properties
+++ b/i18n/module/i18n_module_en.properties
@@ -44,3 +44,6 @@ system_setting_default=System setting default
 value_should_be_an_email= Please input a valid email id
 update_user_profile_fail=Failed to update user profile
 update_settings_fail=Fialed to update user settings
+post_new_password=Update password
+invalid_password=Password should be atleast 8 characters with atleast 1 digit and 1 uppercase letter
+password_no_match=The entered values do not match. Please re-enter.
