Add translations for section labels

--- a/i18n/module/i18n_module_en.properties
+++ b/i18n/module/i18n_module_en.properties
@@ -1,5 +1,6 @@
-profile_settings=Profile Settings
+user_profile=User Profile
 account_settings=Account Settings
+user_settings=User Settings
 user_email_address=E-mail
 surname=Surname
 first_name=First name
@@ -27,7 +28,6 @@ languages=Languages
 update_user_profile_success=Profile was updated
 settings=Settings
 property_to_display_in_analysis_modules=Property to display in analysis modules
-user_settings=User Settings
 general=General
 message=Message
 update_user_profile_success=Profile was updated
@@ -47,4 +47,4 @@ update_settings_fail=Fialed to update user settings
 post_new_password=Update password
 invalid_password=Password should be atleast 8 characters with atleast 1 digit and 1 uppercase letter
 password_no_match=The entered values do not match. Please re-enter.
-use_system_default=User system default
+use_system_default=Use system default
