--- a/i18n/module/i18n_module_en.properties
+++ b/i18n/module/i18n_module_en.properties
@@ -48,3 +48,5 @@ post_new_password=Update password
 invalid_password=Password should be atleast 8 characters with atleast 1 digit and 1 uppercase letter
 password_no_match=The entered values do not match. Please re-enter.
 use_system_default=Use system default
+true_notifications=Yes
+false_notifications=No
