Fixed required fields error handling

--- a/i18n/module/i18n_module_en.properties
+++ b/i18n/module/i18n_module_en.properties
@@ -50,3 +50,4 @@ password_no_match=The entered values do not match. Please re-enter.
 use_system_default=Use system default
 true_notifications=Yes
 false_notifications=No
+value_required=This field can't be left blank
