Verify old password before updating password

--- a/i18n/module/i18n_module_en.properties
+++ b/i18n/module/i18n_module_en.properties
@@ -51,3 +51,4 @@ use_system_default=Use system default
 true_notifications=Yes
 false_notifications=No
 value_required=This field can't be left blank
+wrong_old_password=Please enter the correct password
