--- a/i18n/module/i18n_module_en.properties
+++ b/i18n/module/i18n_module_en.properties
@@ -6,7 +6,7 @@ surname=Surname
 first_name=First name
 old_password=Old password
 new_password=New password
-retype_new_password=Retype new password
+repeat_new_password=Repeat new password
 openid=OpenID
 username=Username
 phone_number=Mobile phone number
@@ -30,7 +30,6 @@ settings=Settings
 property_to_display_in_analysis_modules=Property to display in analysis modules
 general=General
 message=Message
-update_user_profile_success=Profile was updated
 settings_updated=Settings were updated
 style=Style
 db_language=Database language
@@ -40,15 +39,20 @@ enable_message_sms_notifications=Enable message SMS notifications
 analysis_module=Property to display in analysis modules
 name=Name
 short_name=Short name
-system_setting_default=System setting default
+system_default=System default
 value_should_be_an_email= Please input a valid email id
 update_user_profile_fail=Failed to update user profile
 update_settings_fail=Fialed to update user settings
-post_new_password=Update password
+update_password=Update password
 invalid_password=Password should be atleast 8 characters with atleast 1 digit and 1 uppercase letter
-password_no_match=The entered values do not match. Please re-enter.
+passwords_do_not_match=The entered values do not match. Please re-enter.
 use_system_default=Use system default
 true_notifications=Yes
 false_notifications=No
 value_required=This field can't be left blank
-wrong_old_password=Please enter the correct password
+please_enter_the_correct_password=Please enter the correct password
+no_changes_have_been_made=No changes have been made
+validating_please_try_again=The form is currently being validated. Please try again.
+fix_errors_and_try_again=The form contains errors. Please fix the errors and try again.
+password_update_success=Your password was updated successfully
+password_update_failed=Failed to update password
