--- a/i18n/module/i18n_module_en.properties
+++ b/i18n/module/i18n_module_en.properties
@@ -25,12 +25,12 @@ employer=Employer
 education=Education
 interests=Interests
 languages=Languages
-update_user_profile_success=Profile was updated
+update_user_profile_success=User profile updated
 settings=Settings
 property_to_display_in_analysis_modules=Property to display in analysis modules
 general=General
 message=Message
-settings_updated=Settings were updated
+settings_updated=Settings updated
 style=Style
 db_language=Database language
 language=Interface language
@@ -40,7 +40,7 @@ analysis_module=Property to display in analysis modules
 name=Name
 short_name=Short name
 system_default=System default
-value_should_be_an_email= Please input a valid email id
+value_should_be_an_email=Please enter a valid email address
 update_user_profile_fail=Failed to update user profile
 update_settings_fail=Fialed to update user settings
 update_password=Update password
