Stop ignoring API errors, since the API has been fixed
See dhis2/dhis2-core@ba065cbfcd0ecb1c4dce258edfa587d3fefed6fc

--- a/i18n/module/i18n_module_en.properties
+++ b/i18n/module/i18n_module_en.properties
@@ -31,6 +31,7 @@ property_to_display_in_analysis_modules=Property to display in analysis modules
 general=General
 message=Message
 settings_updated=Settings updated
+failed_to_update_settings=Failed to update settings
 style=Style
 db_language=Database language
 language=Interface language
