--- a/i18n/module/i18n_module_en.properties
+++ b/i18n/module/i18n_module_en.properties
@@ -1,6 +1,6 @@
-user_profile=User Profile
-account_settings=Account Settings
-user_settings=User Settings
+user_profile=User profile
+account_settings=Account settings
+user_settings=User settings
 user_email_address=E-mail
 surname=Surname
 first_name=First name
@@ -45,7 +45,7 @@ value_should_be_an_email=Please enter a valid email address
 update_user_profile_fail=Failed to update user profile
 update_settings_fail=Fialed to update user settings
 update_password=Update password
-invalid_password=Password should be atleast 8 characters with atleast 1 digit and 1 uppercase letter
+invalid_password=Password should be at least 8 characters with at least 1 digit and 1 uppercase letter
 passwords_do_not_match=The entered values do not match. Please re-enter.
 use_system_default=Use system default
 true_notifications=Yes
