--- a/i18n/module/es.po
+++ b/i18n/module/es.po
@@ -1,164 +1,162 @@
 #. extracted from i18n_module_en.properties
-#, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2016-12-01 00:28-0400\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
+"PO-Revision-Date: 2016-12-01 17:49+0000\n"
+"Last-Translator: Joaquin Urbano Serra <kimbalear@gmail.com>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"Language: es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Translate Toolkit 2.0.0b3\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"X-Generator: Pootle 2.8\n"
+"X-POOTLE-MTIME: 1480614552.000000\n"
 
 #: user_profile
 msgid "User profile"
-msgstr ""
+msgstr "Perfil de usuario"
 
 #: account_settings
-#, fuzzy
 msgid "Account settings"
-msgstr "Ajustes de usuario"
+msgstr "Configuración de la cuenta"
 
 #: user_settings
 msgid "User settings"
-msgstr "Ajustes de usuario"
+msgstr "Preferencias de usuario"
 
 #: user_email_address
 msgid "E-mail"
-msgstr ""
+msgstr "E-mail"
 
 #: surname
 msgid "Surname"
-msgstr ""
+msgstr "Apellido"
 
 #: first_name
 msgid "First name"
-msgstr ""
+msgstr "Nombre"
 
 #: old_password
 msgid "Old password"
-msgstr ""
+msgstr "Contraseña antigua"
 
 #: new_password
 msgid "New password"
-msgstr ""
+msgstr "Contraseña nueva"
 
 #: repeat_new_password
 msgid "Repeat new password"
-msgstr ""
+msgstr "Repita la contraseña"
 
 #: openid
 msgid "OpenID"
-msgstr ""
+msgstr "OpenID:"
 
 #: username
 msgid "Username"
-msgstr ""
+msgstr "Nombre de usuario"
 
 #: phone_number
 msgid "Mobile phone number"
-msgstr ""
+msgstr "Número de teléfono móvil"
 
 #: job_title
 msgid "Job title"
-msgstr ""
+msgstr "Cargo"
 
 #: introduction
 msgid "Introduction"
-msgstr ""
+msgstr "Introducción"
 
 #: gender
 msgid "Gender"
-msgstr ""
+msgstr "Sexo"
 
 #: male
 msgctxt "male"
 msgid "Male"
-msgstr ""
+msgstr "Masculino"
 
 #: female
 msgctxt "female"
 msgid "Female"
-msgstr ""
+msgstr "Femenino"
 
 #: other
 msgctxt "other"
 msgid "Other"
-msgstr ""
+msgstr "Otro"
 
 #: gender_male
 msgctxt "gender_male"
 msgid "Male"
-msgstr ""
+msgstr "Masculino"
 
 #: gender_female
 msgctxt "gender_female"
 msgid "Female"
-msgstr ""
+msgstr "Femenino"
 
 #: gender_other
 msgctxt "gender_other"
 msgid "Other"
-msgstr ""
+msgstr "Otro"
 
 #: birthday
 msgid "Birthday"
-msgstr ""
+msgstr "Fecha de nacimiento"
 
 #: nationality
 msgid "Nationality"
-msgstr ""
+msgstr "Nacionalidad"
 
 #: employer
 msgid "Employer"
-msgstr ""
+msgstr "Empleador"
 
 #: education
 msgid "Education"
-msgstr ""
+msgstr "Educación"
 
 #: interests
 msgid "Interests"
-msgstr ""
+msgstr "Intereses"
 
 #: languages
 msgid "Languages"
-msgstr ""
+msgstr "Idiomas"
 
 #: update_user_profile_success
 msgid "User profile updated"
-msgstr ""
+msgstr "Perfil de usuario actualizado"
 
 #: settings
-#, fuzzy
 msgid "Settings"
-msgstr "Ajustes de usuario"
+msgstr "Configuración"
 
 #: property_to_display_in_analysis_modules
-#, fuzzy
 msgctxt "property_to_display_in_analysis_modules"
 msgid "Property to display in analysis modules"
-msgstr "Propiedad a desplegar en módulos de análisis"
+msgstr "Propiedad que se mostrará en los módulos de análisis"
 
 #: general
 msgid "General"
-msgstr ""
+msgstr "General"
 
 #: message
 msgid "Message"
-msgstr ""
+msgstr "Mensaje"
 
 #: settings_updated
 msgid "Settings updated"
-msgstr ""
+msgstr "Configuración actualizada"
 
 #: failed_to_update_settings
 msgid "Failed to update settings"
-msgstr ""
+msgstr "Error al actualizar la configuración"
 
 #: style
 msgid "Style"
@@ -181,85 +179,87 @@ msgid "Enable message SMS notifications"
 msgstr "Habilitar notificaciones para SMS"
 
 #: analysis_module
-#, fuzzy
 msgctxt "analysis_module"
 msgid "Property to display in analysis modules"
-msgstr "Propiedad a desplegar en módulos de análisis"
+msgstr "Propiedad que se mostrará en los módulos de análisis"
 
 #: name
 msgid "Name"
-msgstr ""
+msgstr "Nombre"
 
 #: short_name
 msgid "Short name"
-msgstr ""
+msgstr "Abreviatura"
 
 #: system_default
 msgid "System default"
-msgstr ""
+msgstr "Sistema por defecto"
 
 #: value_should_be_an_email
 msgid "Please enter a valid email address"
-msgstr ""
+msgstr "Por favor, introduzca una dirección válida de correo electrónico"
 
 #: update_user_profile_fail
 msgid "Failed to update user profile"
-msgstr ""
+msgstr "Error al actualizar el perfil de usuario"
 
 #: update_settings_fail
 msgid "Fialed to update user settings"
-msgstr ""
+msgstr "Error al actualizar la configuración del usuario"
 
 #: update_password
 msgid "Update password"
-msgstr ""
+msgstr "Actualizar contraseña"
 
 #: invalid_password
 msgid ""
 "Password should be at least 8 characters with at least 1 digit and 1 "
 "uppercase letter"
 msgstr ""
+"La contraseña debe tener al menos 8 caracteres con al menos 1 dígito y 1 "
+"letra mayúscula"
 
 #: passwords_do_not_match
 msgid "The entered values do not match. Please re-enter."
-msgstr ""
+msgstr "Los valores introducidos no coinciden. Vuelve a ingresarlos."
 
 #: use_system_default
 msgid "Use system default"
-msgstr ""
+msgstr "Usar opciones predeterminadas del sistema"
 
 #: true_notifications
 msgid "Yes"
-msgstr ""
+msgstr "Sí"
 
 #: false_notifications
 msgid "No"
-msgstr ""
+msgstr "No"
 
 #: value_required
 msgid "This field can't be left blank"
-msgstr ""
+msgstr "Este campo no puede dejarse en blanco"
 
 #: please_enter_the_correct_password
 msgid "Please enter the correct password"
-msgstr ""
+msgstr "Por favor ingrese la contraseña correcta"
 
 #: no_changes_have_been_made
 msgid "No changes have been made"
-msgstr ""
+msgstr "No se han realizado cambios"
 
 #: validating_please_try_again
 msgid "The form is currently being validated. Please try again."
-msgstr ""
+msgstr "El formulario está siendo validado. Vuelve a intentarlo."
 
 #: fix_errors_and_try_again
 msgid "The form contains errors. Please fix the errors and try again."
 msgstr ""
+"El formulario contiene errores. Corrija los errores e inténtelo de nuevo."
 
 #: password_update_success
 msgid "Your password was updated successfully"
-msgstr ""
+msgstr "Tu contraseña se actualizó correctamente."
 
 #: password_update_failed
 msgid "Failed to update password"
-msgstr ""
+msgstr "No se pudo cambiar la contraseña"
