--- a/i18n/module/i18n_module_es.properties
+++ b/i18n/module/i18n_module_es.properties
@@ -5,7 +5,7 @@ user_email_address=E-mail
 surname=Apellido
 first_name=Nombre
 old_password=Contrase\u00F1a antigua
-new_password=Contrase\u00F1a nueva
+new_password=Nueva contrase\u00F1a
 repeat_new_password=Repita la contrase\u00F1a
 openid=OpenID:
 username=Nombre de usuario
@@ -27,7 +27,7 @@ interests=Intereses
 languages=Idiomas
 update_user_profile_success=Perfil de usuario actualizado
 settings=Configuraci\u00F3n
-property_to_display_in_analysis_modules=Propiedad que se mostrar\u00E1 en los m\u00F3dulos de an\u00E1lisis
+property_to_display_in_analysis_modules=Propiedad a desplegar en m\u00F3dulos de an\u00E1lisis
 general=General
 message=Mensaje
 settings_updated=Configuraci\u00F3n actualizada
@@ -35,13 +35,13 @@ failed_to_update_settings=Error al actualizar la configuraci\u00F3n
 style=Estilo
 db_language=Idioma de la base de datos
 language=Idioma de la interfaz
-enable_message_email_notifications=Habilitar notificaciones de correo electr\u00F3nico
+enable_message_email_notifications=Habilitar notificaciones por correo-e
 enable_message_sms_notifications=Habilitar notificaciones para SMS
-analysis_module=Propiedad que se mostrar\u00E1 en los m\u00F3dulos de an\u00E1lisis
+analysis_module=Propiedad a desplegar en m\u00F3dulos de an\u00E1lisis
 name=Nombre
 short_name=Abreviatura
 system_default=Sistema por defecto
-value_should_be_an_email=Por favor, introduzca una direcci\u00F3n v\u00E1lida de correo electr\u00F3nico
+value_should_be_an_email=Por favor, introduzca una direcci\u00F3n v\u00E1lida de correo-e
 update_user_profile_fail=Error al actualizar el perfil de usuario
 update_settings_fail=Error al actualizar la configuraci\u00F3n del usuario
 update_password=Actualizar contrase\u00F1a
