Add a few translations

--- a/i18n/module/i18n_module_en.properties
+++ b/i18n/module/i18n_module_en.properties
@@ -57,3 +57,6 @@ validating_please_try_again=The form is currently being validated. Please try ag
 fix_errors_and_try_again=The form contains errors. Please fix the errors and try again.
 password_update_success=Your password was updated successfully
 password_update_failed=Failed to update password
+no_value=No value
+true=Yes
+false=No
