big refactor of formFields. Added ViewPorofile

--- a/i18n/module/i18n_module_en.properties
+++ b/i18n/module/i18n_module_en.properties
@@ -1,6 +1,7 @@
 user_profile=User profile
 account_settings=Account settings
 user_settings=User settings
+view_profile=View profile
 user_email_address=E-mail
 surname=Surname
 first_name=First name
@@ -25,6 +26,8 @@ employer=Employer
 education=Education
 interests=Interests
 languages=Languages
+user_roles=User roles
+user_organizational_units=User org units
 update_user_profile_success=User profile updated
 settings=Settings
 property_to_display_in_analysis_modules=Property to display in analysis modules
