added colors to messages, changed message to reflect that special characters are required, updated d2-ui with new validation for password

--- a/i18n/module/i18n_module_en.properties
+++ b/i18n/module/i18n_module_en.properties
@@ -48,7 +48,7 @@ value_should_be_an_email=Please enter a valid email address
 update_user_profile_fail=Failed to update user profile
 update_settings_fail=Fialed to update user settings
 update_password=Update password
-invalid_password=Password should be at least 8 characters with at least 1 digit, 1 uppercase letter and 1 special character
+invalid_password=Password should be at least 8 characters with at least 1 digit, 1 uppercase letter and 1 special character "!@#$%^&*(),.?":{}|<>"
 passwords_do_not_match=The entered values do not match. Please re-enter.
 use_system_default=Use system default
 true_notifications=Yes
