added correct birthday format, changed User Profile name to Edit User Profile and View Full Profile

--- a/i18n/module/i18n_module_en.properties
+++ b/i18n/module/i18n_module_en.properties
@@ -1,7 +1,7 @@
-user_profile=User profile
-account_settings=Account settings
-user_settings=User settings
-view_profile=View profile
+edit_user_profile=Edit user profile
+edit_account_settings=Edit account settings
+edit_user_settings=Edit user settings
+view_profile=View full profile
 user_email_address=E-mail
 surname=Surname
 first_name=First name
