DHIS2-2808 started work on 2stepUI

--- a/i18n/module/i18n_module_en.properties
+++ b/i18n/module/i18n_module_en.properties
@@ -42,6 +42,7 @@ enable_message_email_notifications=Enable message email notifications
 enable_message_sms_notifications=Enable message SMS notifications
 analysis_module=Property to display in analysis modules
 name=Name
+setup_two_factor=Setup two factor
 short_name=Short name
 system_default=System default
 value_should_be_an_email=Please enter a valid email address
