Add about page, refactor info card

--- a/i18n/module/i18n_module_en.properties
+++ b/i18n/module/i18n_module_en.properties
@@ -69,6 +69,26 @@ value_should_be_an_email=Please enter a valid email address
 update_user_profile_fail=Failed to update user profile
 update_settings_fail=Fialed to update user settings
 update_password=Update password
+
+buildTime=Build time
+version=DHIS2 Version
+revision=revision
+cacheProvider=Cache provider
+
+osName=OS name
+osVersion=OS version
+osArchitecture=OS architecture
+
+serverDate=Server date
+cpuCores=CPU cores
+memoryInfo=Memory info
+javaVersion=Java version
+lastAnalyticsTableRuntime=Last analytics table runtime
+lastAnalyticsTableSuccess=Last analytics table success
+
+fileStoreProvider=File store provider
+jasperReportsVersion=Jasper reports version
+
 invalid_password=Password should be at least 8 characters with at least 1 digit, 1 uppercase letter and 1 special character "!@#$%^&*(),.?":{}|<>"
 passwords_do_not_match=The entered values do not match. Please re-enter.
 use_system_default=Use system default
@@ -86,3 +106,4 @@ true=Yes
 false=No
 yes=Yes
 no=No
+
