Restructure about page, add sections

--- a/i18n/module/i18n_module_en.properties
+++ b/i18n/module/i18n_module_en.properties
@@ -71,21 +71,29 @@ update_settings_fail=Fialed to update user settings
 update_password=Update password
 
 buildTime=Build time
-version=DHIS2 Version
-revision=revision
+version=Version
+revision=Revision
 cacheProvider=Cache provider
-
+system_info=System info
 osName=OS name
 osVersion=OS version
 osArchitecture=OS architecture
-
 serverDate=Server date
 cpuCores=CPU cores
 memoryInfo=Memory info
 javaVersion=Java version
 lastAnalyticsTableRuntime=Last analytics table runtime
 lastAnalyticsTableSuccess=Last analytics table success
-
+userAgent=User agent
+database=Database
+type=Type
+user=User
+system_settings=System settings
+systemTitle=System title
+startModule=Start module
+minPasswordLength=Minimum password length
+maxPasswordLength=Maximum password length
+calendar=Calendar
 fileStoreProvider=File store provider
 jasperReportsVersion=Jasper reports version
 
