--- a/i18n/module/i18n_module_en.properties
+++ b/i18n/module/i18n_module_en.properties
@@ -27,28 +27,35 @@ education=Education
 interests=Interests
 languages=Languages
 user_roles=User roles
-qr_code=Barcode/QR code to scan
 user_organizational_units=User org units
 update_user_profile_success=User profile updated
-twoFA_status_on=2-Factor Verification is ON
-twoFA_status_off=2-Factor Verification is OFF
-twoFA_turn_on=Do you want to turn ON 2-Factor?
-twoFA_turn_off=Do you want to turn OFF 2-Factor?
-turn_on=Turn ON
-turn_off=Turn OFF
-download_app=Download the Authenticator app
-download_app_from=Download the Authenticator App from the 
-app_store=App store
-in_app_select=In the Authenticator App select 
-choose=Choose 
+
+qr_code=Barcode/QR code to scan
+qr_code_instructions=With Two-factor authentication enabled on you will be asked to enter a second verification code when you log in. To generate this verification code you must use a two factor authenticator app. If you do not have this app you must download it on your phone/tablet. We suggest using the Google Authenticator.
+open_auth_app=Open you two factor authentication app of choice.
+twoFA=Two-factor authentication
+twoFA_status_on=Two-factor authentication is ENABLED
+twoFA_status_off=Two-factor authentication is DISABLED
+twoFA_turn_on=Enter code and click enable to ENABLE two-factor authentication.
+twoFA_turn_off=Enter code and click disable to DISABLE two-factor authentication.
+enable=enable
+disable=disable
+cancel=cancel
+turn_on=ENABLE
+turn_off=DISABLE
+enter_code=Enter the code from your authenticator app and click enable.
 begin_setup=Begin setup.
-scan_barcode=Scan a barcode.
-twoFA_on_success=2-Factor successfully turned ON
-twoFA_off_success=2-Factor successfully turned OFF
-twoFA_on_fail=Failed to turn ON 2-Factor
-twoFA_off_fail=Failed to turn OFF 2 -actor
-qr_code_instructions=With 2-Factor authentication turned on you will be asked to enter a second verification code when you log in. To generate this verification code you must use the Authenticator app. If you do not have this app you must download it on your phone/tablet.
-what_phone_tablet=What kind of phone/tablet do you have?
+scan_barcode=Scan the barcode below.
+how_to_enable=How to enable Two-factor authentication
+click_enable=Click the ENABLE button above.
+twoFA_on_success=Two-factor authentication successfully ENABLED
+twoFA_off_success=Two-factor authentication successfully DISABLED
+twoFA_on_fail=Failed ENABLE Two-factor authentication
+twoFA_off_fail=Failed DISABLE Two-factor authentication
+two_factor_authentication=TWO-FACTOR AUTHENTICATION
+please_enter_the_correct_code=Please enter the correct authentication code.
+
+
 settings=Settings
 property_to_display_in_analysis_modules=Property to display in analysis modules
 general=General
@@ -62,7 +69,6 @@ enable_message_email_notifications=Enable message email notifications
 enable_message_sms_notifications=Enable message SMS notifications
 analysis_module=Property to display in analysis modules
 name=Name
-setup_two_factor=Setup 2-Factor
 short_name=Short name
 system_default=System default
 value_should_be_an_email=Please enter a valid email address
