WIP avatarEditor van save but not yet display

--- a/i18n/module/i18n_module_en.properties
+++ b/i18n/module/i18n_module_en.properties
@@ -96,6 +96,11 @@ maxPasswordLength=Maximum password length
 calendar=Calendar
 fileStoreProvider=File store provider
 jasperReportsVersion=Jasper reports version
+profile_picture=Profile picture
+select_profile_picture=Select profile picture
+remove_profile_picture=Remove profile picture
+no_profile_picture_available=No profile profile picture available
+
 
 invalid_password=Password should be at least 8 characters with at least 1 digit, 1 uppercase letter and 1 special character "!@#$%^&*(),.?":{}|<>"
 passwords_do_not_match=The entered values do not match. Please re-enter.
