--- a/i18n/module/i18n_module_en.properties
+++ b/i18n/module/i18n_module_en.properties
@@ -26,6 +26,11 @@ employer=Employer
 education=Education
 interests=Interests
 languages=Languages
+whats_app=Whats app
+facebook_messenger=Facebook messenger
+skype=Skype
+telegram=Telegram
+twitter=Twitter
 user_roles=User roles
 qr_code=Barcode/QR code to scan
 user_organizational_units=User org units
