Adds whatsApp validation and fixes linting

--- a/i18n/module/i18n_module_en.properties
+++ b/i18n/module/i18n_module_en.properties
@@ -74,6 +74,7 @@ value_should_be_an_email=Please enter a valid email address
 update_user_profile_fail=Failed to update user profile
 update_settings_fail=Fialed to update user settings
 update_password=Update password
+invalid_whats_app=Please enter a valid international phone number (+0123456789)
 
 buildTime=Build time
 version=Version
