Working avatar upload with upload error handling

--- a/i18n/module/i18n_module_en.properties
+++ b/i18n/module/i18n_module_en.properties
@@ -69,6 +69,7 @@ value_should_be_an_email=Please enter a valid email address
 update_user_profile_fail=Failed to update user profile
 update_settings_fail=Fialed to update user settings
 update_password=Update password
+avatar_upload_error=Failed to upload avatar image
 
 buildTime=Build time
 version=Version
