Improves naming consistency: - Use "avatar" in the application - Use "profile picture" for users

--- a/i18n/module/i18n_module_en.properties
+++ b/i18n/module/i18n_module_en.properties
@@ -69,7 +69,6 @@ value_should_be_an_email=Please enter a valid email address
 update_user_profile_fail=Failed to update user profile
 update_settings_fail=Fialed to update user settings
 update_password=Update password
-avatar_upload_error=Failed to upload avatar image
 
 buildTime=Build time
 version=Version
@@ -97,10 +96,11 @@ maxPasswordLength=Maximum password length
 calendar=Calendar
 fileStoreProvider=File store provider
 jasperReportsVersion=Jasper reports version
-profile_picture=Profile picture
-select_profile_picture=Select profile picture
-remove_profile_picture=Remove profile picture
-no_profile_picture_available=No profile profile picture available
+avatar=Profile picture
+select_avatar=Select profile picture
+remove_avatar=Remove profile picture
+no_avatar_available=No profile profile picture available
+avatar_upload_error=Failed to upload profile picture
 
 
 invalid_password=Password should be at least 8 characters with at least 1 digit, 1 uppercase letter and 1 special character "!@#$%^&*(),.?":{}|<>"
