--- a/i18n/module/i18n_module_en.properties
+++ b/i18n/module/i18n_module_en.properties
@@ -99,7 +99,7 @@ jasperReportsVersion=Jasper reports version
 avatar=Profile picture
 select_avatar=Select profile picture
 remove_avatar=Remove profile picture
-no_avatar_available=No profile profile picture available
+no_avatar_available=No profile picture available
 avatar_upload_error=Failed to upload profile picture
 
 
