Fixed incorrect product names in translations

--- a/i18n/module/i18n_module_en.properties
+++ b/i18n/module/i18n_module_en.properties
@@ -26,8 +26,8 @@ employer=Employer
 education=Education
 interests=Interests
 languages=Languages
-whats_app=Whats app
-facebook_messenger=Facebook messenger
+whats_app=WhatsApp
+facebook_messenger=Facebook Messenger
 skype=Skype
 telegram=Telegram
 twitter=Twitter
