Add missing translation

--- a/i18n/module/i18n_module_en.properties
+++ b/i18n/module/i18n_module_en.properties
@@ -107,6 +107,7 @@ select_avatar=Select profile picture
 remove_avatar=Remove profile picture
 no_avatar_available=No profile picture available
 avatar_upload_error=Failed to upload profile picture
+about_dhis2=About DHIS2
 
 
 invalid_password=Password should be at least 8 characters with at least 1 digit, 1 uppercase letter and 1 special character "!@#$%^&*(),.?":{}|<>"
