Tweak about page: - Fields match old about page at `/dhis-web-commons-about/about.action` - Field visibility is controlled by the server, if no value is found, the field is not rendered - Added a formatter for date-time fields

--- a/i18n/module/i18n_module_en.properties
+++ b/i18n/module/i18n_module_en.properties
@@ -76,9 +76,9 @@ update_settings_fail=Fialed to update user settings
 update_password=Update password
 invalid_whats_app=Please enter a valid international phone number (+0123456789)
 
-buildTime=Build time
+buildTime=Build date
 version=Version
-revision=Revision
+revision=Build revision
 cacheProvider=Cache provider
 system_info=System info
 osName=OS name
@@ -89,7 +89,8 @@ cpuCores=CPU cores
 memoryInfo=Memory info
 javaVersion=Java version
 lastAnalyticsTableRuntime=Last analytics table runtime
-lastAnalyticsTableSuccess=Last analytics table success
+lastAnalyticsTableSuccess=Last analytics table generation
+intervalSinceLastAnalyticsTableSuccess=Time since last analytics table generation
 userAgent=User agent
 database=Database
 type=Type
@@ -108,7 +109,20 @@ remove_avatar=Remove profile picture
 no_avatar_available=No profile picture available
 avatar_upload_error=Failed to upload profile picture
 about_dhis2=About DHIS2
-
+browse_it_here=Browse it here
+web_api=Web API
+current_user=Current user
+environmentVariable=Environment variable
+systemId=System ID
+lastSystemMonitoringSuccess=Last monitoring success
+externalDirectory=External configuration directory
+fileStoreProvider=File store provider
+nodeId=Node ID
+cacheProvider=Cache provider
+javaOpts=Java opts
+javaVendor=Java vendor
+readReplicaCount=Read replica count
+spatialSupport=Spatial support
 
 invalid_password=Password should be at least 8 characters with at least 1 digit, 1 uppercase letter and 1 special character "!@#$%^&*(),.?":{}|<>"
 passwords_do_not_match=The entered values do not match. Please re-enter.
