Adds missing translations

--- a/i18n/module/i18n_module_en.properties
+++ b/i18n/module/i18n_module_en.properties
@@ -123,6 +123,12 @@ javaOpts=Java opts
 javaVendor=Java vendor
 readReplicaCount=Read replica count
 spatialSupport=Spatial support
+manage_my_apps=Manage my apps
+app_search_placeholder=Search apps
+profile=Profile
+account=Account
+help=Help
+log_out=Log out
 
 invalid_password=Password should be at least 8 characters with at least 1 digit, 1 uppercase letter and 1 special character "!@#$%^&*(),.?":{}|<>"
 passwords_do_not_match=The entered values do not match. Please re-enter.
