--- a/i18n/module/i18n_module_en.properties
+++ b/i18n/module/i18n_module_en.properties
@@ -130,7 +130,7 @@ account=Account
 help=Help
 log_out=Log out
 
-invalid_password=Password should be at least 8 characters with at least 1 digit, 1 uppercase letter and 1 special character "!@#$%^&*(),.?":{}|<>"
+invalid_password=Password should be at least 8 characters with at least 1 digit, 1 uppercase letter and 1 special character"
 passwords_do_not_match=The entered values do not match. Please re-enter.
 use_system_default=Use system default
 true_notifications=Yes
