--- a/i18n/module/i18n_module_en.properties
+++ b/i18n/module/i18n_module_en.properties
@@ -116,3 +116,6 @@ false=No
 yes=Yes
 no=No
 
+password_changed_successfully=Password changed successfully
+login_again=You need to login again to continue using the application.
+login=Login
