--- a/i18n/module/i18n_module_en.properties
+++ b/i18n/module/i18n_module_en.properties
@@ -154,3 +154,4 @@ login_again=You need to login again to continue using the application.
 login=Login
 never=Never
 invalid_date=Invalid date
+user_profile=User profile
