--- a/i18n/module/i18n_module_en.properties
+++ b/i18n/module/i18n_module_en.properties
@@ -91,6 +91,9 @@ javaVersion=Java version
 lastAnalyticsTableRuntime=Last analytics table runtime
 lastAnalyticsTableSuccess=Last analytics table generation
 intervalSinceLastAnalyticsTableSuccess=Time since last analytics table generation
+lastAnalyticsTablePartitionSuccess=Last continuous analytics table update
+intervalSinceLastAnalyticsTablePartitionSuccess=Time since last continuous analytics table update
+lastAnalyticsTablePartitionRuntime=Last continuous analytics table runtime
 userAgent=User agent
 database=Database
 type=Type
