--- a/i18n/en.pot
+++ b/i18n/en.pot
@@ -5,8 +5,8 @@ msgstr ""
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1)\n"
-"POT-Creation-Date: 2021-03-16T12:56:03.527Z\n"
-"PO-Revision-Date: 2021-03-16T12:56:03.527Z\n"
+"POT-Creation-Date: 2021-08-26T20:26:16.141Z\n"
+"PO-Revision-Date: 2021-08-26T20:26:16.141Z\n"
 
 msgid "Never"
 msgstr ""
@@ -310,7 +310,159 @@ msgstr ""
 msgid "View full profile"
 msgstr ""
 
+msgid "Manage personal access tokens"
+msgstr ""
+
 msgid "About DHIS2"
+msgstr ""
+
+msgid "Generate new token"
+msgstr ""
+
+msgid "Error loading personal access tokens"
+msgstr ""
+
+msgid "You don't have any active personal access tokens"
+msgstr ""
+
+msgid "You'll only be shown your token once"
+msgstr ""
+
+msgid ""
+"Make sure to copy your personal access token now. You won't be able to see "
+"it again"
+msgstr ""
+
+msgid "Invalid IP address '{{- ipAddress}}'"
+msgstr ""
+
+msgid "Allowed IP addresses"
+msgstr ""
+
+msgid "One IP address per line"
+msgstr ""
+
+msgid "Allowed HTTP methods"
+msgstr ""
+
+msgid "GET"
+msgstr ""
+
+msgid "POST"
+msgstr ""
+
+msgid "PUT"
+msgstr ""
+
+msgid "PATCH"
+msgstr ""
+
+msgid "DELETE"
+msgstr ""
+
+msgid "Invalid referrer '{{- referrer}}'"
+msgstr ""
+
+msgid "Allowed referrers"
+msgstr ""
+
+msgid "One referrer per line"
+msgstr ""
+
+msgid "Error fetching your authorities"
+msgstr ""
+
+msgid "Retry loading authorities"
+msgstr ""
+
+msgid "This personal access token will have the following authorities"
+msgstr ""
+
+msgid ""
+"This setting is not a security feature — the Referer header can be spoofed "
+"trivially. Using an allowlist of referrers is useful in discouraging third "
+"party developers from reusing this personal access token in their own "
+"websites and apps."
+msgstr ""
+
+msgid "In which context will this personal access token be used?"
+msgstr ""
+
+msgid "Server/script context"
+msgstr ""
+
+msgid "Use cases: Integrations and scripts"
+msgstr ""
+
+msgid "Browser context"
+msgstr ""
+
+msgid "Use cases: Public portals"
+msgstr ""
+
+msgid "Token expiration date must be in the future"
+msgstr ""
+
+msgid "7 days"
+msgstr ""
+
+msgid "30 days"
+msgstr ""
+
+msgid "60 days"
+msgstr ""
+
+msgid "90 days"
+msgstr ""
+
+msgid "Custom..."
+msgstr ""
+
+msgid "The token will expire on {{- tokenExpirationDate}}"
+msgstr ""
+
+msgid "Expiration (required)"
+msgstr ""
+
+msgid "Custom expiration date (required)"
+msgstr ""
+
+msgid "Cancel"
+msgstr ""
+
+msgid ""
+"IP address validation relies on the X-Forwarded-For header, which can be "
+"vulnerable to spoofing under certain configurations. Ensure that your load "
+"balancer or reverse proxy overwrites this header."
+msgstr ""
+
+msgid "Are you sure you want to delete this token?"
+msgstr ""
+
+msgid "Error deleting token"
+msgstr ""
+
+msgid ""
+"Any application or script using this token will no longer be able to access "
+"this instance's API. You cannot undo this action."
+msgstr ""
+
+msgid "Delete token"
+msgstr ""
+
+msgid "Expires"
+msgstr ""
+
+msgid "Created"
+msgstr ""
+
+msgid "Copied token to clipboard"
+msgstr ""
+
+msgid "Copy token to clipboard"
+msgstr ""
+
+msgid "Delete"
 msgstr ""
 
 msgid "User profile updated"
@@ -416,4 +568,24 @@ msgid "Enable message email notifications"
 msgstr ""
 
 msgid "Enable message SMS notifications"
+msgstr ""
+
+msgctxt "HTTP method"
+msgid "GET"
+msgstr ""
+
+msgctxt "HTTP method"
+msgid "POST"
+msgstr ""
+
+msgctxt "HTTP method"
+msgid "PUT"
+msgstr ""
+
+msgctxt "HTTP method"
+msgid "PATCH"
+msgstr ""
+
+msgctxt "HTTP method"
+msgid "DELETE"
 msgstr ""
