--- a/i18n/en.pot
+++ b/i18n/en.pot
@@ -5,8 +5,8 @@ msgstr ""
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1)\n"
-"POT-Creation-Date: 2021-08-30T09:59:42.089Z\n"
-"PO-Revision-Date: 2021-08-30T09:59:42.089Z\n"
+"POT-Creation-Date: 2021-08-30T19:22:36.292Z\n"
+"PO-Revision-Date: 2021-08-30T19:22:36.292Z\n"
 
 msgid "Never"
 msgstr ""
@@ -425,6 +425,13 @@ msgid "Expiration (required)"
 msgstr ""
 
 msgid "Custom expiration date (required)"
+msgstr ""
+
+msgid ""
+"Personal access tokens should only be used in a browser context for public "
+"access instances. For private instances, tokens should be treated like "
+"passwords and be kept private — requests should instead be routed through a "
+"proxy."
 msgstr ""
 
 msgid "Cancel"
